[tool.poetry]
name = "tradenet-ai"
version = "0.1.0"
description = "All-market signal engine and dashboard built by Jahid"
authors = ["Jahid <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.110.0"
stripe = "^7.4.0"
textblob = "^0.18.0"
passlib = "^1.7.4"
pytz = "^2024.1"
python-jose = "^3.3.0"
websocket-client = "^1.7.0"
psutil = "^5.9.8"
package-name = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
